Bug 483214 - Crow Translate's global shortcuts doesn't persist after reboot
Summary: Crow Translate's global shortcuts doesn't persist after reboot
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kglobalaccel
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.0.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-11 10:34 UTC by Cherkah
Modified: 2024-03-16 21:03 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Plasma 6.0.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cherkah 2024-03-11 10:34:53 UTC
Shortcuts do work.
but looks like global shortcuts registered by .desktop files like this:

```
crow-translate/data/io.crow_translate.CrowTranslate.desktop

 [Desktop Action TranslateSelectedText] 
 Exec=qdbus io.crow_translate.CrowTranslate /io/crow_translate/CrowTranslate/MainWindow translateSelection 
 Name=Translate selected text 
 Name[fi_FI]=Käännä valittu teksti 
 Name[pt_PT]=Traduzir o texto selecionado 
 Name[ru_RU]=Перевести выделенный текст 
 X-KDE-Shortcuts=Ctrl+Alt+E 
```
doesn't persist after reboot.
that's the bug.

ref.  https://github.com/crow-translate/crow-translate/issues/661
Comment 1 Bug Janitor Service 2024-03-16 14:03:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kglobalacceld/-/merge_requests/46
Comment 2 Nicolas Fella 2024-03-16 21:01:44 UTC
Git commit 6822f3c43b7286474a5f891627b8701cd61f4d4d by Nicolas Fella.
Committed on 16/03/2024 at 14:02.
Pushed by nicolasfella into branch 'master'.

Also consider actions when querying for applications with shortcuts

When looking for applications with shortcuts defined we check the main desktop group, but we should also check each action

This allows apps to have shortcuts for their actions but not the main application

M  +8    -1    src/globalshortcutsregistry.cpp

https://invent.kde.org/plasma/kglobalacceld/-/commit/6822f3c43b7286474a5f891627b8701cd61f4d4d
Comment 3 Nicolas Fella 2024-03-16 21:03:13 UTC
Git commit cca0bbeb4600a6b06c821044b924c4b8ab53059c by Nicolas Fella.
Committed on 16/03/2024 at 21:03.
Pushed by nicolasfella into branch 'Plasma/6.0'.

Also consider actions when querying for applications with shortcuts

When looking for applications with shortcuts defined we check the main desktop group, but we should also check each action

This allows apps to have shortcuts for their actions but not the main application
(cherry picked from commit 6822f3c43b7286474a5f891627b8701cd61f4d4d)

M  +8    -1    src/globalshortcutsregistry.cpp

https://invent.kde.org/plasma/kglobalacceld/-/commit/cca0bbeb4600a6b06c821044b924c4b8ab53059c