Also consider actions when querying for applications with shortcuts

When looking for applications with shortcuts defined we check the main desktop group, but we should also check each action

This allows apps to have shortcuts for their actions but not the main application

BUG: 483214